// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client options Client console.log clientLogLevel is silent 1`] = `
Array [
  "Hey.",
]
`;

exports[`client options Client console.log hot disabled 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`client options Client console.log hot enabled 1`] = `
Array [
  "[HMR] Waiting for update signal from WDS...",
  "Hey.",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`client options Client console.log liveReload disabled 1`] = `
Array [
  "Hey.",
]
`;

exports[`client options Client console.log liveReload enabled 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
]
`;
